--- a/bottle.html
+++ b/bottle.html
@@ -25,7 +25,7 @@
         <br>
         <h3 class="btn btn-success"></h3>
     </center>
-    <script src="Bottle.js"></script>
+    <script src="bottle.js"></script>
 </body>
 
 </html>
